[package]
name = "stablesats-shared"
version = "0.9.6-dev"
edition = "2021"
authors = ["Justin Carter <justin@galoy.io>"]
license = "MIT"
repository = "https://github.com/GaloyMoney/stablesats-rs"
description = "Code shared between stablesats packages"

[features]

fail-on-warnings = []

[dependencies]
# setting default-features = false to not include vulnerable time crate
chrono = { version = "0.4", features = ["clock", "serde"], default-features = false }
derive_builder = "0.12.0"
fred = { version = "5.2.0", features = ["subscriber-client"] }
futures = "0.3.27"
opentelemetry = "0.18.0"
rust_decimal = "1.29.0"
rust_decimal_macros = "1.29.0"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.93"
serde_with = "2.3.1"
sqlx = { version = "0.6", features = [ "offline", "runtime-tokio-rustls", "postgres", "decimal", "uuid", "chrono", "json" ] }
sqlxmq = { version = "0.4.1", default-features = false, features = [ "runtime-tokio-rustls" ] }
thiserror = "1.0.40"
tokio = "1.26.0"
tracing = "0.1.37"
tracing-opentelemetry = "0.18.0"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
governor = "0.5.1"
lazy_static = "1.4.0"

[dev-dependencies]
anyhow = "1.0.70"
serde_yaml = "0.9.19"
