[package]
name = "stablesats-shared"
version = "0.12.6-dev"
edition = "2021"
authors = ["Justin Carter <justin@galoy.io>"]
license = "MIT"
repository = "https://github.com/GaloyMoney/stablesats-rs"
description = "Code shared between stablesats packages"

[features]

fail-on-warnings = []

[dependencies]
# setting default-features = false to not include vulnerable time crate
chrono = { workspace = true } 
derive_builder = { workspace = true }
futures = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
sqlx = { workspace = true }
sqlxmq = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
uuid = { workspace = true }
governor = { workspace = true }
lazy_static = { workspace = true }

[dev-dependencies]
anyhow = "1.0.70"
serde_yaml = "0.9.34"
