[package]
name = "user-trades"
version = "0.9.10"
edition = "2021"

[features]

fail-on-warnings = []

[dependencies]
shared = { path = "../shared", package = "stablesats-shared" }
ledger = { path = "../ledger", package = "stablesats-ledger" }
galoy_client = { path = "../galoy-client", package = "galoy-client" }

thiserror = "1.0.40"
chrono = "0.4"
tokio = "1.26.0"
sqlx = { version = "0.6", features = [ "offline", "runtime-tokio-rustls", "postgres", "decimal", "uuid", "chrono", "json" ] }
sqlxmq = { version = "0.4.1", default-features = false, features = [ "runtime-tokio-rustls" ] }
serde_json = "1.0.93"
uuid = "1.3.0"
tracing = "0.1.37"
serde = "1.0.158"
anyhow = "1.0.70"
rust_decimal = "1.29.0"
rust_decimal_macros = "1.29.0"
futures = "0.3.27"
serde_with = "2.3.1"

[dev-dependencies]
anyhow = "1.0.70"
serial_test = "2.0.0"
