[package]
name = "user-trades"
version = "0.9.26"
edition = "2021"

[features]

fail-on-warnings = []

[dependencies]
shared = { path = "../shared", package = "stablesats-shared" }
ledger = { path = "../ledger", package = "stablesats-ledger" }
galoy_client = { path = "../galoy-client", package = "galoy-client" }

thiserror = "1.0.49"
chrono = "0.4"
tokio = "1.29.1"
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "postgres", "rust_decimal", "uuid", "chrono", "json"] }
sqlxmq = { git = "https://github.com/GaloyMoney/sqlxmq", rev = "f03f73c", default-features = false, features = ["runtime-tokio-rustls"] }
serde_json = "1.0.107"
uuid = "1.3.0"
tracing = "0.1.37"
serde = "1.0.158"
anyhow = "1.0.70"
rust_decimal = "1.29.0"
rust_decimal_macros = "1.29.0"
futures = "0.3.27"
serde_with = "2.3.1"

[dev-dependencies]
anyhow = "1.0.70"
serial_test = "2.0.0"
