[package]
name = "user-trades"
version = "0.11.2-dev"
edition = "2021"

[features]

fail-on-warnings = []

[dependencies]
shared = { path = "../shared", package = "stablesats-shared" }
ledger = { path = "../ledger", package = "stablesats-ledger" }
galoy_client = { path = "../galoy-client", package = "galoy-client" }

thiserror = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
sqlxmq = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
futures = { workspace = true }
serde_with = { workspace = true }

[dev-dependencies]
anyhow = "1.0.70"
serial_test = "2.0.0"
